--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>spring-03</module>
         <module>spring-04</module>
         <module>spring-05</module>
+        <module>spring-06</module>
     </modules>
 
     <properties>
