--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>spring-04</module>
         <module>spring-05</module>
         <module>spring-06</module>
+        <module>spring-07</module>
     </modules>
 
     <properties>
