--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>spring-06</module>
         <module>spring-07</module>
         <module>spring-08</module>
+        <module>spring-09</module>
     </modules>
 
     <properties>
