整合mybatis方式三推荐使用，引用外部properties文件,改成了扫描com下面所有包,使用MapperScannerConfigurer自动创建dao的实现类

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>spring-09</module>
         <module>spring-10</module>
         <module>spring-11</module>
+        <module>spring-12</module>
     </modules>
 
     <properties>
