--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>spring-10</module>
         <module>spring-11</module>
         <module>spring-12</module>
+        <module>spring-13</module>
     </modules>
 
     <properties>
